# HiveEngine

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  GUIDELINES.md  HiveFeatures.json  LICENSE  NOTICE  README.md
Antennae/: CMakeLists.txt
Antennae/include/antennae/: actions.h  input.h  keyboard.h  mouse.h
Antennae/src/antennae/: input.cpp
Antennae/tests/: test_antennae_input.cpp
Brood/: CMakeLists.txt  hive_launcher.cpp  larvae_runner_config.h  main.cpp  main_benchmark.cpp  main_gui.cpp
Brood/cmake/: run_expected_failure.cmake
Brood/include/brood/: larvae_runner_config.h  process_runtime.h
Brood/src/: hive_launcher.cpp  larvae_benchmark_main.cpp  larvae_runner_gui_main.cpp  larvae_runner_main.cpp
Brood/src/launcher/: gltf_import_job.cpp  launcher_platform.cpp  launcher_platform.h  launcher_project.cpp  launcher_project.h  launcher_scene.cpp  launcher_scene.h
Brood/tests/: test_hive_launcher.cpp
Comb/: CMakeLists.txt
Comb/include/comb/: allocator_concepts.h  benchmark_slab.cpp  buddy_allocator.h  chained_buddy_allocator.h  combmodule.h  default_allocator.h  linear_allocator.h  memory_resource.h  new.h  platform.h  pool_allocator.h  precomp.h  slab_allocator.h  stack_allocator.h  thread_safe_allocator.h  utils.h
Comb/src/comb/: combmodule.cpp  default_allocator.cpp  linear_allocator.cpp  platform.cpp
Comb/tests/: benchmark_buddy.cpp  benchmark_linear.cpp  benchmark_pool.cpp  benchmark_slab.cpp  test_buddy.cpp  test_default_allocator.cpp  test_linear.cpp  test_memory_resource.cpp  test_platform.cpp  test_pool.cpp  test_slab.cpp  test_stack.cpp  test_thread_safe.cpp
Drone/: CMakeLists.txt  THREADING.md
Drone/include/drone/: await_counter.h  coroutine_allocator.h  counter.h  frame_pipeline.h  job_submitter.h  job_system.h  job_types.h  mpmc_queue.h  parallel_scratch.h  schedule_on.h  service_thread.h  task.h  work_stealing_deque.h  worker_context.h
Drone/src/drone/: coroutine_allocator.cpp  drone_module.cpp  parallel_scratch.cpp  service_thread.cpp  worker_context.cpp
Drone/tests/: test_drone.cpp  test_frame_pipeline.cpp  test_mpmc_queue.cpp  test_work_stealing_deque.cpp
Forge/: ASSET_REFERENCES.md  CMakeLists.txt
Forge/include/forge/: asset_browser.h  asset_inspector.h  gizmo.h  (+21 more)
Forge/tests/: test_inspector_helpers.cpp  test_selection.cpp
Hive/: CMakeLists.txt
Hive/tests/: test_bvh.cpp  test_clock.cpp  test_dynamic_library.cpp  test_functor.cpp  test_geometry.cpp  test_log.cpp  test_math.cpp  test_module.cpp  test_radix_sort.cpp  test_singleton.cpp  test_sort_key.cpp
HiveEngine/: CMakeLists.txt
HiveEngine/src/: hvpch.h  lypch.cpp  lypch.h
Larvae/: CMakeLists.txt  README.md
Larvae/tests/: benchmark_capabilities.cpp  test_capabilities.cpp
Nectar/: CMakeLists.txt  README.md
Nectar/tests/: test_asset_database.cpp  test_asset_event.cpp  test_asset_handle.cpp  test_asset_loader.cpp  test_asset_server.cpp  test_asset_status.cpp  test_asset_storage.cpp  test_cas_store.cpp  test_content_hash.cpp  test_cook_pipeline.cpp  test_cooker_registry.cpp  test_dependency_graph.cpp  test_disk_mount.cpp  test_file_watcher.cpp  test_gc_budget.cpp  test_gltf_importer.cpp  test_hive_parser.cpp  test_hive_writer.cpp  test_hot_reload.cpp  test_import_context.cpp  test_import_pipeline.cpp  test_importer_registry.cpp  test_io_scheduler.cpp  test_memory_mount.cpp  test_mmap_mount.cpp  test_obj_importer.cpp  test_pak_format.cpp  test_pak_mount.cpp  test_pak_roundtrip.cpp  test_path.cpp  test_project_file.cpp  test_texture_importer.cpp  test_version_scan.cpp  test_virtual_filesystem.cpp
Queen/: CMakeLists.txt  README.md
Queen/tests/: test_archetype.cpp  test_archetype_graph.cpp  test_bvh.cpp  test_change_detection.cpp  test_column.cpp  test_command_buffer.cpp  test_commands.cpp  test_component_index.cpp  test_component_info.cpp  test_component_mask.cpp  test_entity.cpp  test_entity_allocator.cpp  test_entity_location.cpp  test_event.cpp  test_hierarchy.cpp  test_json_serialization.cpp  test_mpmc_queue.cpp  test_observer.cpp  test_parallel.cpp  test_parallel_scheduler.cpp  test_query.cpp  test_query_descriptor.cpp  test_query_term.cpp  test_reflection.cpp  test_reflection_phase1.cpp  test_regression.cpp  test_resource.cpp  test_resource_param.cpp  test_scheduler.cpp  test_sparse_set.cpp  test_system.cpp  test_table.cpp  test_thread_pool.cpp  test_tick.cpp  test_type_factory.cpp  test_type_id.cpp  test_work_stealing_deque.cpp  test_world.cpp  test_world_parallel.cpp  test_world_serialization.cpp
Sandbox/: CMakeLists.txt  demo_main.cpp  main.cpp
Sandbox/InputDemo/: mainInput.cpp
Sandbox/shaders/: shader.frag
Swarm/: CMakeLists.txt  create_class.sh
Swarm/src/: diligent_swarm.cpp  diligent_swarm_linux_vulkan.cpp  diligent_swarm_vulkan.cpp  diligent_swarm_win32_vulkan.cpp  null_swarm.cpp  swarm.cpp  swarm_module.cpp  swarmmodule.cpp
Terra/: CMakeLists.txt
Terra/tests/: test_terra_api.cpp
Test/: CMakeLists.txt  MainTest.cpp
Test/HiveEngine/: ConsoleLoggerTest.cpp  ECSTest.cpp  FileLoggerTest.cpp
Testbed/: CMakeLists.txt
Testbed/include/: stb_image.h  tiny_obj_loader.h
Testbed/src/: linux_main.cpp  logtestbed.cpp  main.cpp  systemmodule.cpp  win32_main.cpp
Waggle/: CMakeLists.txt
Waggle/tests/: test_cmake_generator.cpp  test_disabled_propagation.cpp  test_engine_runner.cpp  test_gameplay_module.cpp  test_project_manager.cpp  test_project_scaffolder.cpp  test_time.cpp  test_transform_system.cpp  test_waggle_app.cpp
Wax/: CMakeLists.txt  README.md
Wax/tests/: benchmark_array.cpp  benchmark_fixed_string.cpp  benchmark_span.cpp  benchmark_string.cpp  benchmark_string_view.cpp  benchmark_vector.cpp  test_array.cpp  test_binary_serialization.cpp  test_fixed_string.cpp  test_hash_map.cpp  test_hash_set.cpp  test_span.cpp  test_string.cpp  test_string_view.cpp  test_vector.cpp
projects/sponza_demo/: .gitignore  CMakeLists.txt  project.hive
tests/freelibrary/: CMakeLists.txt  minimal_dll.cpp  test_freelibrary.cpp
tools/diligent/: CMakeLists.txt  HiveDiligentConfig.cmake.in
(+692 files in other folders)
